Update index.html adding booth-sign

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         const validSources = [
             'linkedin', 'google', 'intercom', 'twitter', 'frank-kiosk', 'frank-toy',
             'material-poster', 'material-sample', 'sample-box', 'business-jar',
-            'bar-sticker', 'textile-exchange', 'novu', 'facebook', 'instagram', 'wechat'
+            'bar-sticker', 'textile-exchange', 'novu', 'facebook', 'instagram', 'wechat', 'booth-sign'
         ];
 
         const validMediums = [
